# qtfa

./: README.md  pyproject.toml
docs/: API文档.md
legacy/: __init__.py  data.py
qtfa/: analyze.py  performance.py  plotting.py  prepare.py
qtfa/data/dal/: factor.py
tests/: test_performance.py  test_prepare.py
